Started Cleanup of css
- Removed index-1 and all references mad ein index
- Removed device sizes for top banner
+ Added devices-width background-image remover
? Looking into slimming the page size
? Looking into scaling the images a bit better, load time is longer than
I'd like.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="main-wrapper">
 		<header>
 			<div class="container">
-				<a href="index-1.html" class="logo">
+				<a href="index.html" class="logo">
 					<span class="g">
 						<img src="img\id-logo-1.png" alt="Brave & Heart">
 					</span>
@@ -60,11 +60,11 @@
 					</span>
 				</a>
 				<nav class="main">
-					<a href="index-1.html#" class="opener"><span class="one"></span><span class="two"></span><span class="three"></span></a>
+					<a href="index.html#" class="opener"><span class="one"></span><span class="two"></span><span class="three"></span></a>
 					<ul>
-						<li><a href="index-1.html#what-we-do">What we do</a></li>
-						<li><a href="index-1.html#leadership">Who we are</a></li>
-						<li><a href="index-1.html#contact">Newsletter</a></li>
+						<li><a href="#what-we-do">What we do</a></li>
+						<li><a href="#leadership">Who we are</a></li>
+						<li><a href="#contact">Newsletter</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="index-1.html#what-we-do" class="arrow"></a>
+			<a href="index.html#what-we-do" class="arrow"></a>
 			<div class="social">
 				Follow us
 				<a href="https://www.linkedin.com/organization/12907192" target="_blank" class="linkedin"></a>
@@ -222,7 +222,7 @@
                     </script>
 				<!-- End Form from Mailchimp -->
 				<!-- Brave and Heart Logo -->
-				<a href="index-1.html" class="logo">
+				<a href="index.html" class="logo">
 						<span class="g">
 							<img src="img\bh-logo.png" alt="Brave & Heart">
 						</span>
