Reordering/Cleaning index.html to improve load speed
As things are now load speed is taking some time, mail chimp looks to be
downloading jquery when I already have it in the js folder. Pushed the
style application to the top. Resized the images to make them a bit
faster to load and better quality

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+		<link rel="stylesheet" href="css\normalise.css">
+		<link rel="stylesheet" href="css\style.css">
+		<link rel="stylesheet" href="ff\style.css">
+		<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
 		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -31,11 +37,7 @@
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 	<title>Brave & Heart - Be Different.</title>
 	<meta name="”description”" content="Be Different - We help you develop world class strategy & tactics to future proof your business.">
-	<link rel="stylesheet" href="css\normalise.css">
-	<link rel="stylesheet" href="css\style.css">
-	<link rel="stylesheet" href="ff\style.css">
-	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
 	<script src="js\jquery.js"></script>
 	<script src="js\script-r=1.js"></script>
 	<!--  Mailchimp CSS 
@@ -218,7 +220,7 @@
                         </form>
                     </div>
                     <!-- MailChimp Validation code for form -->
-                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='BIRTHDAY';ftypes[3]='birthday';fnames[4]='MMERGE4';ftypes[4]='text';fnames[5]='MMERGE5';ftypes[5]='text';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+                    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='BIRTHDAY';ftypes[3]='birthday';fnames[4]='MMERGE4';ftypes[4]='text';fnames[5]='MMERGE5';ftypes[5]='text';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
                     </script>
 				<!-- End Form from Mailchimp -->
 				<!-- Brave and Heart Logo -->
