Late Night Push
So tired.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div class="main-wrapper">
 		<header>
 			<div class="container">
-				<a href="index.html" class="logo">
+				<a href="/" class="logo">
 					<span class="g">
 						<img src="img\id-logo-1.png" alt="Brave & Heart">
 					</span>
@@ -61,7 +61,7 @@
 					</span>
 				</a>
 				<nav class="main">
-					<a href="index.html#" class="opener"><span class="one"></span><span class="two"></span><span class="three"></span></a>
+					<a href="/" class="opener"><span class="one"></span><span class="two"></span><span class="three"></span></a>
 					<ul>
 						<li><a href="#what-we-do">What we do</a></li>
 						<li><a href="#leadership">Who we are</a></li>
@@ -219,11 +219,11 @@
                         </form>
                     </div>
                     <!-- MailChimp Validation code for form -->
-                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='BIRTHDAY';ftypes[3]='birthday';fnames[4]='MMERGE4';ftypes[4]='text';fnames[5]='MMERGE5';ftypes[5]='text';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+                    <script type='text/javascript' src='./js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='BIRTHDAY';ftypes[3]='birthday';fnames[4]='MMERGE4';ftypes[4]='text';fnames[5]='MMERGE5';ftypes[5]='text';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
                     </script>
 				<!-- End Form from Mailchimp -->
 				<!-- Brave and Heart Logo -->
-				<a href="index.html" class="logo">
+				<a href="/" class="logo">
 						<span class="g">
 							<img src="img\bh-logo.png" alt="Brave & Heart">
 						</span>
